--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
@@ -17,10 +18,12 @@
     "gravatar": "^1.8.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "mailgun.js": "^9.2.0",
     "mongoose": "^7.4.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.4",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
+    "jest": "^29.6.2",
     "nodemon": "2.0.15"
   }
 }
